# olivias-garden-foundation

./: .gitignore  AGENTS.md  DEPLOYMENT.md  NEON_SETUP.md  README.md  deploy-and-configure.mjs  package-lock.json  package.json  tsconfig.base.json  turbo.json
.github/workflows/: README.md  deploy-main.yml  foundation-web-deploy-reusable.yml  pr-checks.yml  pull-request-checks.yml  pull-request-staging-validation-reusable.yml  staging-stack-cleanup.yml  web-deploy.yml  web-pull-request-checks.yml
.kiro/steering/: architecture.md  auth-entitlements.md  glossary.md  product-vision.md
.postman/: resources.yaml
apps/admin/: index.html  package-lock.json  package.json  vite.config.ts
apps/grn/: .env.example  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  vite.config.ts  vitest.config.ts
apps/okra/: eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
apps/store/: eslint.config.js  index.html  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts
apps/web/: index.html  package.json  playwright.config.ts  tsconfig.app.json  tsconfig.node.json  vite.config.ts
backend/: Cargo.toml  openapi.yaml  package-lock.json  package.json  samconfig.template.toml  template.yaml
backend/config/entitlements/: v1.tiers.json
backend/db/: README.md  check-migrations.ps1  check-migrations.sh  ddl.sql  migrate.ps1  migrate.sh
backend/db/migrations/: 0012_deterministic_reminders.sql  0014_ai_guardrails_usage_budget.sql  0015_premium_analytics_events.sql  0016_catalog_source_provenance.sql  0020_gardener_season_ladder.sql  0021_user_experience_levels.sql  0024_user_defined_crops.sql  0025_user_defined_crop_listings.sql
backend/functions/: ci-auth-seed.mjs
backend/functions/ci_auth_seed/: app.py
backend/functions/tests/: rolling-geo-aggregation.test.mjs
backend/infra/premium/: template.yaml
backend/openapi/paths/: billing.yaml  premium.yaml  profile.yaml  reminders.yaml  requests.yaml
backend/openapi/schemas/: _responses.yaml  billing.yaml  claims.yaml  crop-library.yaml  premium.yaml  profile.yaml
backend/src/api/: auth.rs  badge_cabinet.rs  db.rs  gardener_tier.rs  main.rs  router.rs  structured_json.rs  tips_framework.rs
backend/src/api/handlers/: agent_task.rs  ai_copilot.rs  analytics.rs  billing.rs  claim.rs  crop.rs  feed.rs  listing.rs  listing_discovery.rs  mod.rs  user.rs
backend/src/api/middleware/: entitlements.rs
backend/src/api/models/: catalog.rs  crop.rs  profile.rs
backend/src/auth/: authorizer.rs  post_confirmation.rs
backend/src/workers/: derived_pipeline_replay.rs  rolling_geo_aggregation.rs
backend/tests/: get_me_integration_test.rs
config/entitlements/: v1.tiers.json
data/catalog/: README.md  metrics_400.json  metrics_400.md  (+4 more)
docs/: ai-safety-cost-guardrails.md  catalog-quality-thresholds.md  catalog-source-provenance.md  operational-alerting.md  phase-6-entitlements-matrix.md  premium-ai-copilot.md  store-product-images-backfill.md  tips-analytics-feedback-loop.md  tips-editorial-standards.md  tips-framework-implementation.md  tips-framework-v1.md  tool-first-structured-json-standard.md
frontend/: package-lock.json
lib/: must-have-crops.csv
scripts/: README.md  configure-foundation-web.mjs  deploy-and-configure.mjs  stage-image-processing.mjs
services/admin-api/: Cargo.toml  package-lock.json  package.json  template.yaml
services/admin-api/db/: migrate.sh
services/admin-api/db/migrations/: 0027_store_products.sql  0028_store_product_images.sql  0029_store_products_variations.sql  0030_store_product_images_variation_match.sql  0031_workshops.sql  0032_workshops_paid.sql  0033_workshop_signups_payment.sql  0034_workshop_signups_checkout_url.sql  0035_workshop_signups_cancellation.sql
services/admin-api/scripts/: integration-test.mjs
services/admin-api/src/api/: auth.rs  main.rs  router.rs
services/admin-api/src/api/handlers/: store.rs
services/admin-api/src/api/middleware/: correlation.rs
services/admin-api/src/api/models/: store.rs
services/admin-api/src/auth/: authorizer.mjs  authorizer.rs
services/admin-api/src/handlers/: api.mjs  store-image-cleanup.mjs  store-image-processor.mjs
services/admin-api/src/services/: activity.mjs  auth.mjs  db.mjs  finance.mjs  http.mjs  store-image-processing-queue.mjs  store-images.mjs  store.mjs  workshops.mjs
services/admin-api/test/: authorizer.test.mjs  run-tests.mjs
(+854 files in other folders)
