[package]
name = "community-garden"
version = "0.1.0"
edition = "2021"

[lints.rust]
unsafe_code = "forbid"
missing_debug_implementations = "warn"
rust_2018_idioms = { level = "warn", priority = -1 }

[lints.clippy]
# Pedantic lints for code quality
pedantic = { level = "warn", priority = -1 }
# Nursery lints (experimental but useful)
nursery = { level = "warn", priority = -1 }
# Specific denies for common issues
unwrap_used = "warn"
expect_used = "warn"
panic = "warn"
todo = "warn"
unimplemented = "warn"
# Allow some pedantic/nursery lints that are too noisy
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
similar_names = "allow"
if_same_then_else = "allow"

[dependencies]
aws-config = { workspace = true }
aws-sdk-cognitoidentityprovider = { workspace = true }
aws-sdk-eventbridge = { workspace = true }
aws_lambda_events = { workspace = true }
jsonwebtoken = { workspace = true }
lambda_http = { workspace = true }
lambda_runtime = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tokio-postgres = { version = "0.7", features = ["with-uuid-1", "with-chrono-0_4", "with-serde_json-1"] }
rustls = "0.23"
rustls-native-certs = "0.8"
tokio-postgres-rustls = "0.13"
geohash = "0.13"
sha2 = { workspace = true }
hmac = "0.12"
hex = { workspace = true }

[dev-dependencies]
serial_test = { workspace = true }

[[bin]]
name = "lambda-authorizer"
path = "src/auth/authorizer.rs"

[[bin]]
name = "post-confirmation"
path = "src/auth/post_confirmation.rs"

[[bin]]
name = "api"
path = "src/api/main.rs"

[[bin]]
name = "rolling-geo-aggregation-worker"
path = "src/workers/rolling_geo_aggregation.rs"

[[bin]]
name = "derived-pipeline-replay"
path = "src/workers/derived_pipeline_replay.rs"

[workspace.dependencies]
lambda_runtime = "0.13"
lambda_http = "0.13"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-sdk-cognitoidentityprovider = "1"
aws-sdk-s3 = "1"
aws-sdk-cloudwatchlogs = "1"
aws-sdk-sesv2 = "1"
aws-sdk-sfn = "1"
aws-sdk-eventbridge = "1"
aws-sdk-bedrockruntime = "1"
aws-sdk-scheduler = "1"
aws-smithy-types = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
thiserror = "1"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
sha2 = "0.10"
base64 = "0.22"
hex = "0.4"
proptest = "1"
regex = "1"
uuid = { version = "1", features = ["v4", "serde"] }
serde_dynamo = "4"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
aws_lambda_events = "0.15"
jsonwebtoken = "9"
serial_test = "3"

